--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -38,7 +38,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-checkbox": "~3.0.0"
+    "expo-sqlite": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
